tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_5.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  x := ((((r MOD 2) DIV (0 * y)) * ((2 MOD y) + (+ 2))) - (+ ((+ z) - (- z))));
               z := ((((200 DIV 2) * (- 2)) DIV ((z MOD x) + (1 * 2))) DIV ((+ (1 DIV 200)) + ((0 * 0) DIV (200 + 1223))));
               x := ((- ((- 2) - (1223 - z))) + (((- 1223) + (- 200)) * ((x DIV 1) DIV (200 + 1223))));
               q := ((((200 MOD 1223) DIV (x MOD 1223)) - ((+ x) * (x + 2))) = (((1223 MOD 200) MOD (+ 200)) MOD ((0 + z) - (0 - y))));
               p := (~ (((y DIV 1) * (200 * 1223)) # ((- y) - (z * y))));
               x := (- (((z + x) * (- z)) + (- (+ 2))));
               y := ((((+ 1223) DIV (1 DIV x)) + ((- 200) MOD (0 MOD 200))) MOD ((+ (- 1)) - ((z - y) * (z - y))));
               r := (((+ (0 + 200)) - ((y - 1223) MOD (1 - z))) = ((+ (z - x)) MOD ((- 200) DIV (x * y))));
               p := ((- (+ (x DIV 200))) > (((z MOD 200) + (2 DIV y)) MOD ((0 MOD 200) + (2 * 0))));
               p := ((((2 MOD 0) DIV (+ 1)) + (+ (0 - 200))) < (((- 1) DIV (200 * 200)) DIV ((z + z) * (0 DIV 200))))
END Test11.